test/sema/inference/type_inference_unknown_type.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

fn main(): void { 
  // CHECK: [[# @LINE + 1 ]]:7: error: the type of 'n' is unknown
  let n;
}

// CHECK-NOT: {{.*error.*}}
